--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <header>
-        <h1>🏆 Tournament Hub</h1>
-        <p>Find your next challenge</p>
+        <h1>Events list</h1>
+        <p>operated by Rising Star</p>
     </header>
 
     <main>
@@ -24,7 +24,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 Tournament Hub</p>
+        <p>&copy; RISING STAR MANAGER</p>
     </footer>
 
     <script src="script.js"></script>
