--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </main>
 
     <footer>
-        <p>&copy; RISING STAR MANAGER</p>
+        <p>&copy; WWW.RISTAR.CO</p>
     </footer>
 
     <script src="script.js"></script>
